Closed
Bug 1822038
Opened 2 years ago
Closed 2 years ago
WebTransport Bidirectional channel not enqueued to stream if it arrives before first pull
Categories
(Core :: DOM: Networking, defect, P2)
Core
DOM: Networking
Tracking
()
RESOLVED
FIXED
113 Branch
Tracking | Status | |
---|---|---|
firefox113 | --- | fixed |
People
(Reporter: jesup, Assigned: jesup)
References
(Blocks 1 open bug)
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file)
If a BidirectionalStream is received before the first Pull from IncomingBidirectionalStreams, it will never be enqueued unless another is received.
This can be provoked locally and sometimes in CI by running under rr
Assignee | ||
Comment 1•2 years ago
|
||
Pushed by rjesup@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4a866db45f1a
Handle WebTransport Bidirectional streams arriving before the first pull r=kershaw
Comment 3•2 years ago
|
||
Backed out for causing build bustages on WebTransportDatagramDuplexStream.cpp
- Backout link
- Push with failures
- Failure Log
- Failure line: /builds/worker/workspace/obj-build/dist/include/mozilla/dom/Promise.h:300:33: error: function 'mozilla::dom::Promise::ThenWithCycleCollectedArgs<(lambda at /builds/worker/checkouts/gecko/dom/webtransport/api/WebTransportDatagramDuplexStream.cpp:190:13), RefPtr<mozilla::dom::IncomingDatagramStreamAlgorithms> &, RefPtr<mozilla::dom::Promise> &>' is used but not defined in this translation unit, and cannot be defined in any other translation unit
Flags: needinfo?(rjesup)
Pushed by rjesup@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6111d676d9d1
Handle WebTransport Bidirectional streams arriving before the first pull r=kershaw
Comment 5•2 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 2 years ago
status-firefox113:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
Assignee | ||
Updated•2 years ago
|
Flags: needinfo?(rjesup)
You need to log in
before you can comment on or make changes to this bug.
Description
•