Bug 1822038: Handle WebTransport Bidirectional streams arriving before the first pull r=kershaw

Differential Revision: https://phabricator.services.mozilla.com/D172414